fix: added opaque overlay to events images to improve contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,19 +270,31 @@ h5, h4, p {
 }
 
 .event-img-2 {
-    background-image: url("../images/beer-of-week.webp");
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../images/beer-of-week.webp");
+    background-size: cover;
+    max-height: 100%;
+    background-position: center;
 }
 
 .event-img-3 {
-    background-image: url("../images/comedy-night.webp");
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../images/comedy-night.webp");
+    background-size: cover;
+    max-height: 100%;
+    background-position: center;
 }
 
 .event-img-4 {
-    background-image: url("../images/rocker.webp");
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../images/rocker.webp");
+    background-size: cover;
+    max-height: 100%;
+    background-position: center;
 }
 
 .event-img-5 {
-    background-image: url("../images/taco-tuesday.webp");
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../images/taco-tuesday.webp");
+    background-size: cover;
+    max-height: 100%;
+    background-position: center;
 }
 
 /* How to find us */
